# mlops-02476

./: .gcloudignore  .gitignore  LICENSE  README.md  arxiv-ml-landscape.psd  cloudbuild.yaml  cloudrun-service.yaml  data.dvc  pyproject.toml  report.html  tasks.py  todo.md
.claude/: settings.json
.devcontainer/: devcontainer.json
.dvc/: config
.github/workflows/: docker-build.yaml  linting.yaml  pre-commit-update.yaml  tests.yaml
configs/: config.yaml
configs/experiment/: scibert_frozen.yaml  scibert_full.yaml  sentence_transformer.yaml
data/: dataset.csv  processed.dvc
data/processed/: classes.json
data/raw/: classes_raw.txt
dockerfiles/: api.dockerfile  train.dockerfile
docs/: mkdocs.yaml
docs/source/: cloud_deployment.md  index.md  profiling.md
reports/: README.md  prometheus_metrics.md  report.html
src/arxiv_classifier/: api.py  data.py  metrics.py  modal_train.py  model.py  process_classes.py  test_gpu.py  train.py  training_output.py  visualize.py
src/arxiv_classifier/arxiv_categories_scraper/: __init__.py  process.py
src/arxiv_classifier/models/: __init__.py  base.py  scibert.py  sentence_transformer.py
tests/: locustfile.py  test_api.py  test_data.py  test_model.py  test_train.py  trigger_alert.py
