[build-system]
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"

[project]
name = "arxiv_classifier"
version = "0.0.1"
description = "Classification of scientific papers by subject category"
authors = [{ name = "Nicholas", email = "your@email.com" }]
license = { file = "LICENSE" }
keywords = ["machine learning", "MLOps"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.128.0",
    "hydra-core>=1.3.0",
    "loguru>=0.7.0",
    "matplotlib>=3.10.8",
    "modal>=1.3.0.post1",
    "nvitop>=1.6.1",
    "omegaconf>=2.3.0",
    "peft>=0.18.1",
    "sentence-transformers>=3.0.0",
    "typer==0.15.1",
    "uvicorn==0.34.0",
    "wandb>=0.16.0",
    "prometheus-client>=0.20.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
# PyTorch GPU support (CPU is default):
# uv sync            → CPU
# uv sync --extra cuda  → NVIDIA GPU
# uv sync --extra rocm  → AMD GPU
cuda = ["torch>=2.4.0", "torchvision>=0.19.0"]
rocm = [
    "torch>=2.4.0",
    "torchvision>=0.19.0",
    "pytorch-triton-rocm>=3.0.0 ; sys_platform == 'linux'",
]

[dependency-groups]
dev = [
    "coverage==7.13.1",
    "httpx>=0.27.0",
    "invoke==2.2.1",
    "matplotlib>=3.8.0",
    "mkdocs-material==9.7.1",
    "mkdocs==1.6.1",
    "pre-commit==4.5.1",
    "pytest==9.0.2",
    "ruff==0.14.11",
    "mkdocstrings-python==2.0.1",
    "dvc-gs>=3.0.2",
    "pathspec<1.0.0",             # DVC breaks with pathspec v1.0.0 and above
    "torch-tb-profiler>=0.4.3",
    "locust>=2.43.1",
    "gdown>=5.2.1",
]

[tool.uv]
# Allow checking multiple indexes for best version match
index-strategy = "unsafe-best-match"
conflicts = [[{ extra = "cuda" }, { extra = "rocm" }]]

[tool.uv.sources]
# PyTorch source selection based on optional dependencies
torch = [
    { index = "pytorch-cu124", extra = "cuda" },
    { index = "pytorch-rocm62", extra = "rocm" },
]
torchvision = [
    { index = "pytorch-cu124", extra = "cuda" },
    { index = "pytorch-rocm62", extra = "rocm" },
]
pytorch-triton-rocm = [{ index = "pytorch-rocm62", extra = "rocm" }]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[[tool.uv.index]]
name = "pytorch-rocm62"
url = "https://download.pytorch.org/whl/rocm6.1"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
# Not explicit - acts as fallback for torch when no extra specified

[tool.ruff]
line-length = 120

[tool.coverage.run]
source = ["src/arxiv_classifier"]
omit = ["tests/*"]
